openshift-local/persistent-metrics-zookeeper/base/routes/persistent-metrics-zookeeper/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: persistent-metrics-zookeeper
spec:
  host: persistent-metrics-zookeeper.apps-crc.testing
  to:
    kind: Service
    name: persistent-metrics-zookeeper
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
